...
      testID="myFirstTest">
      <ScrollView contentContainerStyle={styles(width, height).container}>
        <TextInput
          placeholder="Username"
          onChangeText={setUsername}
          onBlur={isValidUsername}
          testID="login-username"
        />
        <TextInput
          placeholder="Password"
          onChangeText={setPassword}
          onBlur={isValidPassword}
          testID="login-password"
        />
        <View style={styles(width, height).actionContainer}>
          <Button onPress={onPressLogin} testID="login-button">
            Login
          </Button>
          <Button onPress={onPressRegister} testID="register-button">
...
